# openclaw-mate

./: .gitignore  .mcp.json  AGENTS.md  README.md  README.zh-CN.md  biome.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  DEPLOY.md  NODE_CONNECTION.md  TASK_EXECUTION.md
docs/plans/: 2026-03-04-openclaw-node-design.md  2026-03-04-openclaw-node-implementation.md  2026-03-07-sidecar-ipc.md  2026-03-12-mate-operator-refactor-checklist.md
scripts/: package-runtime-cdn.mjs  prepare-openclaw-runtime.mjs
sidecar/src/modules/: browser.test.ts  browser.ts  vision.test.ts  vision.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_log_store.rs  app_paths.rs  auth_client.rs  device_identity.rs  local_connect.rs  main.rs  operator_client.rs  profile_store.rs  sidecar.rs  tray.rs  ws_client.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Select.tsx  Switch.test.tsx  Switch.tsx  index.ts  sonner.tsx
src/hooks/: useLocalConnection.ts  useNodeConnection.test.tsx  useNodeConnection.ts  useRuntimeLogBridge.ts  useTaskHandler.ts  useTauri.ts  useUpdater.ts
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: activity-log.ts
src/pages/: ActivityPage.tsx  AnalyticsPage.tsx  CapabilitiesPage.tsx  ChannelPage.tsx  ChatPage.tsx  DashboardPage.tsx  ModelsPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  SkillsPage.tsx
src/store/: bootstrap.store.ts  config.store.test.ts  config.store.ts  connection.store.ts  index.ts  tasks.store.test.ts  tasks.store.ts
src/styles/: tokens.css
src/types/: index.test.ts  index.ts
(+10 files in other folders)
